src/apps/main/scss/v2/components/feed/_feed.scss
@use "../../layout";
@use "../../theme";
@use "../scaffold";
@use "../image";
@use "../list";
@use "../card";

$feed-item-min-width: 550px;
$feed-item-max-width: 600px;

$feed-card-height: 9rem;
$feed-gap: 1rem;
$feed-scrollable-span: 3;

/**
 * Calculate the height of $n-rows rows of .feed-item-card.
 */
@function heightOfFeedRows($n-rows) {
    @return calc(
        (#{$feed-card-height} * #{$n-rows}) + (#{$feed-gap} * (#{$n-rows} - 1))
    );
}
$feed-scrollable-height: heightOfFeedRows($feed-scrollable-span);
$feed-card-height: 9rem;

.feed {
    display: grid;
    grid-template-columns: repeat(
        auto-fit,
        minmax($feed-item-min-width, $feed-item-max-width)
    );
    grid-gap: $feed-gap;
    grid-auto-flow: row dense;
    justify-content: center;

    @include theme.display-max-width(
        scaffold.contentWidth($feed-item-min-width)
    ) {
        // On narrow devices, use a flex column instead of grid
        display: flex;
        flex-direction: column;
        row-gap: $feed-gap;
    }
}

%feed-item {
    width: 100%;
}

.feed-item {
    @extend %feed-item;
}

.feed-item-scrollable {
    @extend %feed-item;
}

.feed-item-card {
    @extend %feed-item;
    @extend %card;

    @include theme.transition([ border-radius ]);
    @include layout.row($wrap: nowrap);
    @include layout.height($feed-card-height);

    > .image {
        @include layout.size($feed-card-height);
        overflow: clip;

        > svg {
            @extend %stretch;
        }
    }

    > .image-text-wrapper {
        @include layout.size($feed-card-height);
        overflow: clip;

        > .image-text {
            // No actual image available, use some artsy text.
            @include layout.size($feed-card-height * 1.414);
            position: relative;
            top: -25%;
            left: -25%;
            font-family: monospace;
            letter-spacing: 2px;
            font-size: calc(#{$feed-card-height} / 5);
            font-weight: bold;
            text-align: start;
            text-transform: uppercase;
            transform: rotate(45deg);
            transform-origin: center;
            line-height: 1.3;
            line-break: anywhere;
            overflow: clip;
        }
    }

    > .text {
        @extend %margin-medium;
        @extend %readable-text;
        @extend %stretch;
        overflow: clip;

        > .row {
            justify-content: space-between;
            align-items: baseline;
            flex-wrap: wrap;
            column-gap: 1rem;

            > .title {
                @extend %text-one-line;
                font-size: var(--fs-h5);
            }
        }

        > .summary {
            @include layout.clipped-text(2);
        }
    }

    @include theme.on-small-width() {
        // Display as a card, image above text.
        flex-wrap: wrap;
        min-height: unset;
        max-height: unset;
        height: auto;
        border-radius: 0;

        > .image {
            width: 100%;
            max-width: 100%;
            max-height: unset;
            height: auto;
            aspect-ratio: 2;
            margin: 0;
        }

        > .image-text-wrapper {
            display: none;
        }

        > .text {
            height: auto;
        }
    }

    &[data-type="changelog"],
    &[data-type="app"],
    &[data-type="githubrepository"] {
        .image {
            padding: calc(#{theme.$spacing-medium} * 2);
            background-size: contain;
            box-sizing: border-box;
            background-origin: content-box;
        }
    }

    &[data-type="note"] {
        display: block;

        > article {
            @extend %margin-medium;
        }
    }
}

%embedded-scrollable-list-container {
    @extend %shape-small;
    background-color: var(--surface);
    border: 2px solid var(--local-primary-100);
    display: flex;
    flex-direction: column;

    @include theme.transition((max-height));

    &[data-expanded="true"] {
        max-height: heightOfFeedRows($feed-scrollable-span);
        grid-row: auto / span $feed-scrollable-span;
    }

    &[data-expanded="false"] {
        grid-row: auto / span 1;
        max-height: $feed-card-height;
    }
}

%embedded-scrollable-list {
    @extend %list-vertical-scroll;
    max-height: 100%;
}

.feed-item-dropdown {
    display: flex;
    flex-direction: column;
    max-height: $feed-scrollable-height;

    &.dropdown[data-expanded="true"] {
        padding: 0;
    }

    > .dropdown-header {
        @include layout.row($horizontal: space-between, $wrap: nowrap);
        @extend %padding-medium;

        $font-size: var(--fs-h5);
        font-size: $font-size;

        > .dropdown-title {
            font-size: $font-size;
        }
    }

    > .dropdown-content {
        @extend %list-vertical-scroll;
        max-height: 100%;
    }
}

.feed-message {
    grid-column: 1 / -1;
}

.feed-empty {
    @extend %card;
    @extend %center;
    @extend %padding-medium;
    text-align: center;

    &-title {
        @extend %center;
        @extend %padding-medium;

        width: fit-content;
        background: rgb(2, 0, 36);
        background: linear-gradient(
            131deg,
            var(--local-accent),
            rgb(129, 52, 163),
            var(--local-accent)
        );
        background-size: 300% 300%;
        animation-name: gradient-rotation;
        animation-duration: 8s;
        animation-iteration-count: infinite;
        animation-direction: normal;

        -webkit-text-fill-color: transparent;
        -webkit-background-clip: text;
        font-family: monospace;
        font-size: xxx-large;
        font-weight: 600;

        @keyframes gradient-rotation {
            0% {
                background-position: 0 0;
            }
            25% {
                background-position: 100% 0;
            }
            75% {
                background-position: 0 100%;
            }
            100% {
                background-position: 0 0;
            }
        }
    }

    &-message {
        @extend %padding-medium;
    }

    .oh-no {
        @extend %center;
        font-family: monospace;
        display: flex;
        $translation: 45ch;
        max-width: 6ch;

        .marquee-wrapper {
            @extend %text-one-line;
            width: 6ch;
            overflow-x: clip;

            .marquee {
                @extend %text-one-line;
                animation-name: marquee-scroll;
                animation-duration: 2s;
                animation-direction: normal;
                animation-iteration-count: 1;
                animation-fill-mode: forwards;
                animation-timing-function: cubic-bezier(0.98, 0, 0.72, 0.89);
                animation-delay: 800ms;
            }

            @keyframes marquee-scroll {
                from {
                    transform: translateX(0);
                }
                to {
                    transform: translateX(-$translation);
                }
            }
        }
    }
}

